# wave-sim

./: .Cargo.toml.swo  .Cargo.toml.swp  .gitignore  .result.txt.swp  Cargo.toml  README.md
resources/: shader.frag  shader.vert
src/: .main.rs.swp  .result.txt.swp  main.rs  main.rs.bak  result.txt  simulated.wav.bak
src/gui_support/: .mod.rs.swp  mod.rs
